Fixed styling for photos on mobile to work with the new swiper api

--- a/src/assets/css/main/photos-mobile.css
+++ b/src/assets/css/main/photos-mobile.css
@@ -1,11 +1,12 @@
 @media (max-width: 786px) {
   .content-container {
-    .photo-block {
-      max-width: 90%
+    .swiper-button-prev, .swiper-button-next {
+      display: none;
     }
-    
-    .photo-block #title {
-      font-size: 14px;
+
+    .swiper#small {
+      width: 100%;
+      height: 60vh;
     }
   }
 }
